--- a/Eclipse/appsettings.json
+++ b/Eclipse/appsettings.json
@@ -12,7 +12,7 @@
 
 
   "OpenAI": {
-    "ApiKey": "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"
+    "ApiKey": "Insira aqui sua chave"
   }
   }
 
